2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix includes.
	* semaphore.hh: sstream is required for all archs.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Portably check for SEM_FAILED.
	* libport.mk: Add semaphore.hxx.
	* semaphore.hh: Move inline code to...
	* semaphore.hxx: ...here. New. SEM_FAILED is defined differently on
          Linux and MacOSX: handle that difference.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Use LIBPORT_WIN32.
        Because we now AC_DEFINE WIN32 and it gets prefixed.
	* detect_win32.h,
	* lockable.hh,
	* network.h,
	* semaphore.hh,
	* thread.hh,
	* utime.hh,
	* windows.h: Here.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Properly detect G++.
	* hash.hh: Properly detect G++.
	* semaphore.hh,
	* utime.hh,
	* lockable.hh,
	* containers.hxx: Aesthetic changes.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Improve Windows compatibility.
	* windows.hh: Move to...
	* windows.h: ... this. Because this header isn't specific for C++.
	* README: Update accordingly.
	* libport.mk: Update accordingly.

	* detect_win32.h: New. Defines WIN32 when using MS VC++.
	* network.h: New. Wrap include issues for UNIX/Windows.

	* lockable.hh,
	* semaphore.hh,
	* thread.hh,
	* utime.hh: Update includes. LIBPORT_WIN32 doesn't exist.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	libport/windows.hh
	* windows.hh: New.
	* README, libport.mk, semaphore.hh, thread.hh, utime.hh:
	Adjust.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Restyle
	* ull-fixed-point.hh: here.

2006-11-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Test whether LIBPORT_WIN32 is defined when looking for WIN32.
	Because config.h's define might be prefixed by "LIBPORT_", we look for
	either LIBPORT_WIN32 or just WIN32.
	* lockable.hh,
	* semaphore.hh,
	* thread.hh,
	* utime.hh: Here.

2006-11-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
