@@ -4,15 +4,22 @@
 # include "libport/windows.h"
 # include <cassert>
 
-# if defined WIN32 || defined LIBPORT_WIN32
+# if defined WIN32
 namespace urbi
 {
+#  ifndef SEM_FAILED
+#   define SEM_FAILED 0
+#  endif
   typedef HANDLE sem_t;
-  void sem_init(HANDLE* sem, int useless, int cnt);
-  void sem_post(HANDLE* sem);
-  void sem_wait(HANDLE* sem);
-  void sem_destroy(HANDLE* sem);
-  void sem_getvalue(HANDLE* sem, int* v);
+  sem_t* sem_open (const char* name,
+                   int oflag,
+                   unsigned int /*mode_t*/ mode,
+                   unsigned int value);
+  void sem_init(sem_t* sem, int useless, int cnt);
+  void sem_post(sem_t* sem);
+  void sem_wait(sem_t* sem);
+  void sem_destroy(sem_t* sem);
+  void sem_getvalue(sem_t* sem, int* v);
 }
 # else /* !WIN32 */
 #  include <semaphore.h>
@@ -20,7 +27,7 @@ namespace urbi
 
 # include <sstream>
 
-# if defined __linux
+# if defined __linux || defined WIN32
 /* Linux defines SEM_FAILED as  (sem_t *) 0 */
 #  define IS_SEM_FAILED(sem)   ((sem) == SEM_FAILED)
 # else
