@@ -1,3 +1,13 @@
+2006-12-08  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Add a dummy implementation of sem_open for Windows.
+	* semaphore.hh: Don't check for LIBPORT_WIN32 since libport/windows.h
+          properly defines WIN32 when LIBPORT_WIN32 is defined. Define
+          SEM_FAILED to be a NULL pointer if doesn't exist. Add a dummy
+          implementation of sem_open for WIN32 that returns SEM_FAILED. Clean
+          up prototypes (use sem_t instead of HANDLE).
+	* semaphore.hxx: Implement sem_open and clean up prototypes.
+
 2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
 	Fix includes.
